<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_height"
        android:elevation="8dp"
        android:background="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurantsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spinner_height"
        android:paddingBottom="@dimen/margin_regular" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/noMatchesFoundText"
        android:text="@string/no_matches_found"
        android:layout_height="wrap_content"/>
</FrameLayout>