<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    style="?android:attr/spinnerItemStyle"
    android:singleLine="true"
    android:textColor="@color/secondary_text_color"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="@dimen/spinner_height"
    android:fontFamily="@font/quicksand_medium"
    android:ellipsize="marquee"
    android:textAlignment="inherit"/>